--- a/3d_frame.css
+++ b/3d_frame.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Oxanium:wght@200..800&display=swap');
+
 /* general css */
 * {
     margin: 0px;
@@ -6,9 +7,10 @@
     box-sizing: border-box;
 }
 
-body { 
-    font-family: sans-serif; 
+body {
+    font-family: sans-serif;
     background-color: rgb(205, 224, 240);
+    /* overflow-y: hidden; */
 }
 
 /* background image */
@@ -19,55 +21,106 @@ body {
 
 /* 3d cube frame */
 .scene {
-  width: 500px;
-  height: 500px;
-  perspective: 900px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+    width: 500px;
+    height: 500px;
+    perspective: 900px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .cube_frame {
-  width: 500px;
-  height: 500px;
-  position: relative;
-  transform-style: preserve-3d;
-  transform: translateZ(-100px);
-  transition: transform 1s;
+    width: 500px;
+    height: 500px;
+    position: relative;
+    transform-style: preserve-3d;
+    transform: translateZ(-100px);
+    transition: transform 1s;
 }
 
-.cube_frame.show-front  { transform: translateZ(-100px) rotateY(   0deg); }
-.cube_frame.show-right  { transform: translateZ(-100px) rotateY( -90deg); }
-.cube_frame.show-back   { transform: translateZ(-100px) rotateY(-180deg); }
-.cube_frame.show-left   { transform: translateZ(-100px) rotateY(  90deg); }
-.cube_frame.show-top    { transform: translateZ(-100px) rotateX( -90deg); }
-.cube_frame.show-bottom { transform: translateZ(-100px) rotateX(  90deg); }
+.cube_frame.show-front {
+    transform: translateZ(-100px) rotateY(0deg);
+}
+
+.cube_frame.show-right {
+    transform: translateZ(-100px) rotateY(-90deg);
+}
+
+.cube_frame.show-back {
+    transform: translateZ(-100px) rotateY(-180deg);
+}
+
+.cube_frame.show-left {
+    transform: translateZ(-100px) rotateY(90deg);
+}
+
+.cube_frame.show-top {
+    transform: translateZ(-100px) rotateX(-90deg);
+}
+
+.cube_frame.show-bottom {
+    transform: translateZ(-100px) rotateX(90deg);
+}
 
 .cube__face {
-  position: absolute;
-  width: 500px;
-  height: 500px;
-  line-height: 500px;
-  font-size: 40px;
-  font-weight: bold;
-  color: white;
-  text-align: center;
+    position: absolute;
+    width: 500px;
+    height: 500px;
+    line-height: 500px;
+    font-size: 40px;
+    font-weight: bold;
+    color: white;
+    text-align: center;
 }
 
-.cube__face--front  { background: hsla(  0, 100%, 0%, 0.7); }
-.cube__face--right  { background: #1E1E1E }
-.cube__face--back   { background: hsla(120, 100%, 0%, 0.7); }
-.cube__face--left   { background: hsla(180, 100%, 0%, 0.7); }
-.cube__face--top    { background: hsla(240, 100%, 0%, 0.7); }
-.cube__face--bottom { background: hsla(300, 100%, 0%, 0.7); } 
+.cube__face--front {
+    background: hsla(0, 100%, 0%, 0.7);
+}
 
-.cube__face--front  { transform: rotateY(  0deg) translateZ(250px); }
-.cube__face--right  { transform: rotateY( 90deg) translateZ(250px); }
-.cube__face--back   { transform: rotateY(180deg) translateZ(250px); }
-.cube__face--left   { transform: rotateY(-90deg) translateZ(250px); }
-.cube__face--top    { transform: rotateX( 90deg) translateZ(250px); }
-.cube__face--bottom { transform: rotateX(-90deg) translateZ(250px); }
+.cube__face--right {
+    background: #1E1E1E
+}
+
+.cube__face--back {
+    background: hsla(120, 100%, 0%, 0.7);
+}
+
+.cube__face--left {
+    background: hsla(180, 100%, 0%, 0.7);
+}
+
+.cube__face--top {
+    background: hsla(240, 100%, 0%, 0.7);
+}
+
+.cube__face--bottom {
+    background: hsla(300, 100%, 0%, 0.7);
+}
+
+.cube__face--front {
+    transform: rotateY(0deg) translateZ(250px);
+}
+
+.cube__face--right {
+    transform: rotateY(90deg) translateZ(250px);
+}
+
+.cube__face--back {
+    transform: rotateY(180deg) translateZ(250px);
+}
+
+.cube__face--left {
+    transform: rotateY(-90deg) translateZ(250px);
+}
+
+.cube__face--top {
+    transform: rotateX(90deg) translateZ(250px);
+}
+
+.cube__face--bottom {
+    transform: rotateX(-90deg) translateZ(250px);
+}
 
 /* radio button */
 
@@ -99,18 +152,24 @@ body {
     flex-direction: row;
     flex-wrap: no-wrap;
 }
-.radio-group input{ display: none; }
 
-.radio-group label{
+.radio-group input {
+    display: none;
+}
+
+.radio-group label {
     font-family: sans-serif;
     padding: 10px 16px;
     border-right: 1px solid #202020;
     cursor: pointer;
     transition: all 0.3s;
 }
-.radio-group label:last-of-type{ border-right: 0; }
 
-.radio-group label:hover{
+.radio-group label:last-of-type {
+    border-right: 0;
+}
+
+.radio-group label:hover {
     background: hsla(0, 0%, 0%, 0.8);
     color: #fff;
 }
@@ -121,32 +180,35 @@ body {
 .cube__face--front {
     margin: 0px;
     padding: 0px;
+    height: 100%;
 }
+
 .centered {
     color: #ffffff;
     position: absolute;
     top: -30%;
     left: 8%;
-    font-family: 'Oxanium',sans-serif;
+    font-family: 'Oxanium', sans-serif;
     font-size: 3.5vw;
     font-weight: bolder;
 }
+
 .centered1 {
     color: #ffffff;
     position: absolute;
     top: -22%;
     left: 9%;
-    font-family: 'Oxanium',sans-serif;
+    font-family: 'Oxanium', sans-serif;
     font-size: 1.5vw;
     font-weight: bolder;
 }
 
 /* HomePage 3D cube model */
-#container{
+#container {
     position: absolute;
-    top: 65%;
+    top: 60%;
     left: 50%;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%, -50%);
     width: 70%;
     height: 70%;
 }
@@ -156,13 +218,12 @@ body {
     position: absolute;
     top: -214px;
     left: 50%;
-    transform: translate(-50%,0%);
+    z-index: auto;
+    transform: translate(-50%, 0%);
     text-align: start;
     color: #ffffff;
-    font-family: 'Oxanium',sans-serif;
+    font-family: 'Oxanium', sans-serif;
     font-size: 40px;
 }
 
 /* 2x2 Solver Page */
-
-
